src/objects/Apttus__APTS_Agreement__c.object
<CustomObject>
    <description>Represents an agreement in the system</description>
    <fields>
        <fullName>APTS_3P_Billing_Resp__c</fullName>
        <label>3rd Party Billing Responsibility</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>JDE</fullName>
                </value>
                <value>
                    <fullName>3rd Party</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_ActivateFixedTermOrder__c</fullName>
        <formula>IF(ISPICKVAL(Apttus__Status__c,&apos;Activated&apos;),HYPERLINK( &quot;/apex/APTS_UpdateOrderFixedTerm?agrmentId=&quot; &amp; Id ,IMAGE(&quot;/resource/APTS_FixedTermOrder&quot;, &quot;Activate Fixed Term Order&quot;)),&apos;&apos;)</formula>
        <label>Activate Fixed Term Order</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Activate__c</fullName>
        <formula>IF (OR(AND(OR(ISPICKVAL(Apttus__Status__c,&apos;Fully Signed&apos;), APTS_Signature_Required__c = false),NOT(ISPICKVAL(Apttus__Status_Category__c,&apos;In Effect&apos;)), APTS_Billing_Settings_Count__c = 2),AND(RecordType.Name = &apos;Registration Form&apos;,ISPICKVAL(Apttus__Status_Category__c,&apos;Add email from customer&apos;),ISPICKVAL(Apttus__Status__c,&apos;Added&apos;))), 
 HYPERLINK(&quot;/apex/Apttus__AgreementActivate?id=&quot; &amp;Id, IMAGE(&quot;/resource/Apttus__Button_Activate&quot;, &quot;Activate&quot;),&quot;_self&quot;),
NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_ActiveAssetCount__c</fullName>
        <defaultValue>false</defaultValue>
        <description>to check active assets</description>
        <label>ActiveAssetCount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Adj_EBIT__c</fullName>
        <formula>APTS_Gross_Profit__c -  APTS_Other_Expenses__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Adj. EBIT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Advertising_Promotions_Budget__c</fullName>
        <label>Advertising &amp; Promotions Budget</label>
        <summarizedField>APTS_Agreement_Budget__c.APTS_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>APTS_Agreement_Budget__c.APTS_Category__c</field>
            <operation>equals</operation>
            <value>Promotions, Training</value>
        </summaryFilterItems>
        <summaryForeignKey>APTS_Agreement_Budget__c.Agreement__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>APTS_AgreementBatchLoadExecuted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marks an agreement when the batch load was executed successfully</description>
        <label>Agreement Batch Load Executed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_AgreementExtId__c</fullName>
        <label>Agreement External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_AgreementLIRelatedListDetails__c</fullName>
        <label>AgreementLIRelatedListDetails</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Agreement_Approval_Date__c</fullName>
        <label>Agreement Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Agreement_Approval_Required_Date__c</fullName>
        <label>Agreement Approval Required Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Agreement_Create_Date__c</fullName>
        <formula>DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agreement Create Date (Date only)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Agreement_Creation_Date__c</fullName>
        <label>Agreement Creation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Agreement_CustomName__c</fullName>
        <formula>Apttus__Account__r.Name+&quot; &quot;+RecordType.Name+&quot; &quot;+TEXT(Apttus__Contract_End_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agreement Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Agreement_Denied_Date__c</fullName>
        <label>Agreement Denied Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Agreement_Document_Generation_Date__c</fullName>
        <label>Agreement Document Generation Dat</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Agreement_Duration_Months__c</fullName>
        <defaultValue>60</defaultValue>
        <label>Agreement Duration (Months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Agreement_Header_Changes__c</fullName>
        <label>Agreement Header Changes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Agreement_Includes_3P__c</fullName>
        <label>Agreement Includes 3rd Party?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Machines</fullName>
                </value>
                <value>
                    <fullName>Ingredients</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Agreement_Includes__c</fullName>
        <label>Agreement Includes?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Machines</fullName>
                </value>
                <value>
                    <fullName>Ingredients</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
                <value>
                    <fullName>Operating Service</fullName>
                </value>
                <value>
                    <fullName>Concepts</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Agreement_Negotiation_Date__c</fullName>
        <label>Agreement Negotiation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Agreement_Presented_Date__c</fullName>
        <label>Agreement Presented Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Agreement_Proposal_Valid_Date__c</fullName>
        <label>Agreement Proposal Valid Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Agreement_Request__c</fullName>
        <label>Agreement Request</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Amendment</fullName>
                </value>
                <value>
                    <fullName>Termination</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Agreement_Signature_Date__c</fullName>
        <label>Agreement Signature Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Agremnt_Language_Approvals_Required__c</fullName>
        <label>Language Approvals Required?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_AllinServiceRollup__c</fullName>
        <label>All in Service Cost Rollup</label>
        <summarizedField>Apttus__AgreementLineItem__c.APTS_All_in_Service_Cost_Price__c</summarizedField>
        <summaryFilterItems>
            <field>Apttus__AgreementLineItem__c.APTS_Option_Product_Name__c</field>
            <operation>contains</operation>
            <value>COVERAGE</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Apttus__AgreementLineItem__c.APTS_Option_Product_Name__c</field>
            <operation>contains</operation>
            <value>ALL</value>
        </summaryFilterItems>
        <summaryForeignKey>Apttus__AgreementLineItem__c.Apttus__AgreementId__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>APTS_Amendment_Type__c</fullName>
        <label>Amendment Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Trial To Final</fullName>
                </value>
                <value>
                    <fullName>Penalty Calculation</fullName>
                </value>
                <value>
                    <fullName>Early Exit</fullName>
                </value>
                <value>
                    <fullName>FOL/Rent to Standard Buy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Appendix_Number__c</fullName>
        <label>Appendix Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Asset_Terminated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>to check active assets</description>
        <label>Asset Terminated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_AssignmentCode__c</fullName>
        <formula>Apttus__FF_Agreement_Number__c &amp; Apttus_CMConfig__BillToAccountId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AssignmentCode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Autorized_Signature_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Authorized Signature Customer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Agreements (Autorized Signature Customer)</relationshipLabel>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_BasicServiceRollup__c</fullName>
        <label>Basic Service Cost Rollup</label>
        <summarizedField>Apttus__AgreementLineItem__c.APTS_Basic_Service_Cost_Price__c</summarizedField>
        <summaryFilterItems>
            <field>Apttus__AgreementLineItem__c.APTS_Option_Product_Name__c</field>
            <operation>contains</operation>
            <value>COVERAGE</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Apttus__AgreementLineItem__c.APTS_Option_Product_Name__c</field>
            <operation>contains</operation>
            <value>BASIC</value>
        </summaryFilterItems>
        <summaryForeignKey>Apttus__AgreementLineItem__c.Apttus__AgreementId__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>APTS_BillToIngredientsExtId__c</fullName>
        <label>Bill To Ingredients External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_BillToMachinesServicesExtId__c</fullName>
        <label>Bill To Machines and Services ExternalId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Bill_to_Party_Ingredients__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bill to Party (Ingredients)</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Agreements (Bill to Party (Ingredients))</relationshipLabel>
        <relationshipName>Agreements4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Bill_to_Party_MachServ__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bill to Party(Machine &amp; Services)</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Agreements (Bill to Party(Machine &amp; Services))</relationshipLabel>
        <relationshipName>Agreements5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_BillingPreferenceRelatedDetails__c</fullName>
        <label>BillingPreferenceRelatedDetails</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Billing_Settings_Count__c</fullName>
        <label>Billing Settings Count</label>
        <summaryForeignKey>APTS_Billing_Settings__c.APTS_Agreement_ID__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>APTS_Budget_Category__c</fullName>
        <label>Budget Category</label>
        <summaryFilterItems>
            <field>APTS_Agreement_Budget__c.APTS_Category__c</field>
            <operation>notEqual</operation>
            <value>Tableware</value>
        </summaryFilterItems>
        <summaryForeignKey>APTS_Agreement_Budget__c.Agreement__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>APTS_BuyingGroupExtId__c</fullName>
        <label>Buying Group External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Buying_Group_Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Buying Group Agreement</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>Agreements (Buying Group Agreement)</relationshipLabel>
        <relationshipName>Agreements2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Buying_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Buying Group</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Agreements (Buying Group)</relationshipLabel>
        <relationshipName>Agreements1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_CER_Batch_Executed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to determine if the CER batch was executed succesfully for the record</description>
        <label>CER Batch Executed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Cancel_Request__c</fullName>
        <formula>IF (OR
	(ISPICKVAL(Apttus__Status__c,&quot;Request&quot;), 
	ISPICKVAL(Apttus__Status__c,&quot;In Amendment&quot;), 
	ISPICKVAL(Apttus__Status__c,&quot;Request Approval&quot;), 
	ISPICKVAL(Apttus__Status__c,&quot;Approved Request&quot;),
	ISPICKVAL(Apttus_Approval__Approval_Status__c,&quot;Rejected&quot;) ,
	ISPICKVAL(Apttus__Status__c,&quot;Ready for Signatures&quot;),
	ISPICKVAL(Apttus__Status__c,&quot;Signature Declined&quot;),
	ISPICKVAL(Apttus__Status__c,&quot;Other Party Review&quot;),
	ISPICKVAL(Apttus__Status__c,&quot;Internal Review&quot;)),
 HYPERLINK(&quot;/apex/Apttus__AgreementCancel?id=&quot; &amp;Id, IMAGE(&quot;/resource/Apttus__Button_CancelRequest&quot;, &quot;Cancel Request&quot;), &quot;_self&quot;),
 NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Cancel the agreement request</inlineHelpText>
        <label>Cancel Request</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Category_Product_Present__c</fullName>
        <description>COntract output purpose</description>
        <label>Category Product Present</label>
        <summaryFilterItems>
            <field>Apttus__AgreementLineItem__c.Apttus__Description__c</field>
            <operation>contains</operation>
            <value>Category</value>
        </summaryFilterItems>
        <summaryForeignKey>Apttus__AgreementLineItem__c.Apttus__AgreementId__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>APTS_CatererExtId__c</fullName>
        <label>Caterer External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Caterer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Caterer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Agreements (Caterer)</relationshipLabel>
        <relationshipName>Agreements2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Check_on_Account_Ingredients__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Updated field label only per Defect 19560.</description>
        <inlineHelpText>If True than   
Check Related Fields on Account   
If related fields are blank than set Account as Bill to and Payer To  
If False than   
Check Related fields from Agreement</inlineHelpText>
        <label>Use BT/Payer Ingredients from Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Check_on_Account_Machines__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Updated field label only per Defect 19560.</description>
        <inlineHelpText>If True than   
Check Related Fields on Account   
If related fields are blank than set Account as Bill to and Payer To  
If False than   
Check Related fields from Agreement</inlineHelpText>
        <label>Use BT/Payer Mach &amp; Serv from Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_ComfortOperatingRollup__c</fullName>
        <label>Comfort Operating Cost Rollup</label>
        <summarizedField>Apttus__AgreementLineItem__c.APTS_Comfort_Operating_Cost_Price__c</summarizedField>
        <summaryFilterItems>
            <field>Apttus__AgreementLineItem__c.APTS_Option_Product_Name__c</field>
            <operation>contains</operation>
            <value>COMFORT</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Apttus__AgreementLineItem__c.APTS_Option_Product_Name__c</field>
            <operation>contains</operation>
            <value>OPERATING</value>
        </summaryFilterItems>
        <summaryForeignKey>Apttus__AgreementLineItem__c.Apttus__AgreementId__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>APTS_Concept_Agreement_Type__c</fullName>
        <label>Concept Bundle Agreement Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Master Framework Agreement</fullName>
                </value>
                <value>
                    <fullName>Sub Caterer Agreement</fullName>
                </value>
                <value>
                    <fullName>Client Agreement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Configure_Products_Grid_View__c</fullName>
        <formula>IF ( LEN( Apttus_CMConfig__PriceListId__c ) &gt; 0 , HYPERLINK(&quot;/apex/Apttus_CMConfig__AgreementConfiguration?id=&quot; &amp;Id &amp; &quot;&amp;flow=ngGridFlow&quot;, IMAGE(&quot;/resource/Apttus_QPConfig__Button_Configure&quot;, &quot;Configure Products&quot;),&quot;_self&quot;), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Configure Products (Grid View)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Configure_Products_NG__c</fullName>
        <formula>IF(AND(LEN(Apttus_CMConfig__PriceListId__c) &gt; 0, 
OR(ISPICKVAL(Apttus__Status__c , &apos;Request&apos;), 
ISPICKVAL(Apttus__Status__c , &apos;In Amendment&apos;), 
ISPICKVAL(Apttus__Status__c , &apos;Internal Review&apos;), 
ISPICKVAL(Apttus__Status__c , &apos;Request Approval&apos;), 
ISPICKVAL(Apttus__Status__c,&apos;Other Party Review&apos;),
ISPICKVAL(Apttus__Status__c,&apos;Not added&apos;),
ISPICKVAL(Apttus__Status__c,&apos;Added&apos;)), 
NOT(ISPICKVAL(Apttus_Approval__Approval_Status__c,&apos;Rejected&apos;) 
)),IF(RecordType.DeveloperName == &apos;Registration_Form&apos;,
HYPERLINK(&quot;/apex/Apttus_CMConfig__AgreementConfiguration?id=&quot; &amp;Id &amp; &quot;&amp;flow=RegisterMachineFlow&amp;useDealOptimizer=true&quot;, IMAGE(&quot;/resource/Apttus_QPConfig__Button_Configure&quot;, &quot;Configure Products&quot;),&quot;_top&quot;)
,HYPERLINK(&quot;/apex/Apttus_CMConfig__AgreementConfiguration?id=&quot; &amp;Id &amp; &quot;&amp;flow=NGDefault&amp;useDealOptimizer=true&quot;, IMAGE(&quot;/resource/Apttus_QPConfig__Button_Configure&quot;, &quot;Configure Products&quot;),&quot;_top&quot;))
, NULL)</formula>
        <label>Configure Products (NG)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Contract_Terms__c</fullName>
        <defaultValue>60</defaultValue>
        <label>Contract Terms</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Contracts_3rdParty__c</fullName>
        <description>Define contract inclusion</description>
        <label>Contract Includes 3rd Party?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Services</fullName>
                </value>
                <value>
                    <fullName>Machines</fullName>
                </value>
                <value>
                    <fullName>Ingredients</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_ConversionId__c</fullName>
        <label>Conversion Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_CostPrice__c</fullName>
        <formula>IF(APTS_Line_item_Cost_Price__c!=0 &amp;&amp; APTS_Expected_Category_Cost_Price__c!=0,
APTS_Line_item_Cost_Price__c + APTS_Expected_Category_Cost_Price__c, NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost Price (COGS)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Cost_Price__c</fullName>
        <label>Cost Price</label>
        <summarizedField>Apttus__AgreementLineItem__c.Apttus_CMConfig__Cost__c</summarizedField>
        <summaryForeignKey>Apttus__AgreementLineItem__c.Apttus__AgreementId__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>APTS_Count_of_Budgets__c</fullName>
        <description>Number of Agreement budget records</description>
        <label>Count of Budgets</label>
        <summaryForeignKey>APTS_Agreement_Budget__c.Agreement__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>APTS_Count_of_Contract_Trial__c</fullName>
        <label>Count of Contract Trial</label>
        <summaryFilterItems>
            <field>Apttus__AgreementLineItem__c.APTS_Type_of_Contract__c</field>
            <operation>equals</operation>
            <value>Trial</value>
        </summaryFilterItems>
        <summaryForeignKey>Apttus__AgreementLineItem__c.Apttus__AgreementId__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>APTS_Count_of_Non_Standard_Indexation__c</fullName>
        <label>Count of Non-Standard Indexation</label>
        <summaryFilterItems>
            <field>APTS_Index_Contract__c.APTS_Index_Type__c</field>
            <operation>equals</operation>
            <value>Non-Standard Indexation</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>APTS_Index_Contract__c.APTS_Indexation_Category__c</field>
            <operation>equals</operation>
            <value>Technical Services</value>
        </summaryFilterItems>
        <summaryForeignKey>APTS_Index_Contract__c.APTS_Contract__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>APTS_Count_of_Standard_Indexation__c</fullName>
        <label>Count of Standard Indexation</label>
        <summaryFilterItems>
            <field>APTS_Index_Contract__c.APTS_Index_Type__c</field>
            <operation>equals</operation>
            <value>Standard Indexation</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>APTS_Index_Contract__c.APTS_Indexation_Category__c</field>
            <operation>equals</operation>
            <value>Technical Services</value>
        </summaryFilterItems>
        <summaryForeignKey>APTS_Index_Contract__c.APTS_Contract__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>APTS_CounterBased__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Counter Based</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Country__c</fullName>
        <description>Billing country from Account</description>
        <formula>Apttus__Account__r.BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Create_Adjustments__c</fullName>
        <formula>HYPERLINK(&quot;/apex/APTS_Adjustments?agreementId=&quot; &amp;Id &amp; &quot;&amp;retId=&quot; &amp; Id, IMAGE(&quot;/resource/Button_CreateAdjustmentsPng&quot;,&quot;Create Adjustments&quot;),&quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Create Adjustments</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Created_From_Batch__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To identify whether this record is created by batch job.</description>
        <label>Created From Batch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Currency_label__c</fullName>
        <formula>CASE(CurrencyIsoCode, 
	&apos;DKK&apos;,&apos;Danish Krone&apos;,
	&apos;EUR&apos;,&apos;Euro&apos;,
	&apos;GBP&apos;,&apos;British Pound&apos;,
	&apos;NOK&apos;,&apos;Norwegian Krone&apos;,
	&apos;SEK&apos;,&apos;Swedish Krona&apos;,&apos;U.S. Dollar&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Currency label</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Custom_Amend__c</fullName>
        <description>Amend the agreement</description>
        <formula>IF 
(ISPICKVAL(Apttus__Status__c,&apos;Activated&apos;), 
HYPERLINK(&quot;/apex/Apttus__AgreementAmend?id=&quot; &amp;Id, IMAGE(&quot;/resource/Apttus__Button_Amend&quot;, &quot;Amend&quot;),&quot;_self&quot;),
NULL)</formula>
        <inlineHelpText>Amend the agreement</inlineHelpText>
        <label>Amend</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Custom_Expire__c</fullName>
        <description>Expire the agreement</description>
        <formula>IF 
(ISPICKVAL(Apttus__Status__c,&quot;Activated&quot;), 
HYPERLINK(&quot;/apex/Apttus__AgreementExpire?id=&quot; &amp; Id, IMAGE(&quot;/resource/Apttus__Button_Expire&quot;, &quot;Expire&quot;),&quot;_self&quot;),
NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Expire the agreement</inlineHelpText>
        <label>Expire</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Custom_Renew__c</fullName>
        <description>Renew the agreement</description>
        <formula>IF  
(ISPICKVAL(Apttus__Status__c,&apos;Activated&apos;),
HYPERLINK(&quot;/apex/Apttus__AgreementRenew?id=&quot; &amp; Id, IMAGE(&quot;/resource/Apttus__Button_Renew&quot;, &quot;Renew&quot;),&quot;_self&quot;),
NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Renew the agreement</inlineHelpText>
        <label>Renew</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Custom_Send_For_eSignature__c</fullName>
        <description>Send document to external party using EcoSign integration</description>
        <formula>IF(AND(OR( 
	ISPICKVAL(Apttus__Status__c,&quot;Ready for Signatures&quot;),
	ISPICKVAL(Apttus__Status__c,&quot;Other Party Review&quot;),
	ISPICKVAL(Apttus__Status__c,&quot;Internal Review&quot;),
	APTS_Signature_Required__c = true 
	),AND(NOT(ISPICKVAL(Apttus__Status__c,&quot;Signature Declined&quot;)), NOT(ISPICKVAL(Apttus__Status__c,&apos;Activated&apos;)),
NOT(ISPICKVAL(Apttus__Status__c,&apos;Fully Signed&apos;)),
NOT(ISPICKVAL(Apttus__Status_Category__c,&apos;Request&apos;)),
NOT(ISPICKVAL(Apttus__Status_Category__c,&apos;In Effect&apos;)))),
HYPERLINK(&quot;/apex/Apttus_Echosign__SelectAttachment?targetPageURL=/apex/Apttus_Echosign__EchoSignInfoEdit&amp;id=&quot;&amp;Id, IMAGE(&quot;/resource/Apttus_Echosign__eSignature&quot;,&quot;Send To Other Party For eSignatures&quot;), &quot;_self&quot;), 
NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Send document to external party using EcoSign integration</inlineHelpText>
        <label>Send For eSignature</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Customer_Specific_Freight_charge__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Specific Freight Charge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_DealCalculation__c</fullName>
        <formula>IF( 
	OR(ISPICKVAL(Apttus__Status__c , &apos;Request&apos;), 
	ISPICKVAL(Apttus__Status__c , &apos;In Amendment&apos;),  
	ISPICKVAL(Apttus__Status__c , &apos;Request Approval&apos;)
	), 
HYPERLINK(&quot;/apex/APTS_CalculateROS?id=&quot;&amp;Id, IMAGE(&quot;/resource/APTS_DealCalculateButton&quot;, &quot;Deal Calculation&quot;),&quot;_self&quot;), 
NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deal Calculation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Depreciation_Cost__c</fullName>
        <label>Depreciation Cost</label>
        <summarizedField>Apttus__AgreementLineItem__c.APTS_Depreciation_Cost__c</summarizedField>
        <summaryFilterItems>
            <field>Apttus__AgreementLineItem__c.Apttus_CMConfig__LineType__c</field>
            <operation>equals</operation>
            <value>Product/Service</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Apttus__AgreementLineItem__c.Apttus_CMConfig__HasOptions__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Apttus__AgreementLineItem__c.Apttus_CMConfig__IsPrimaryLine__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Apttus__AgreementLineItem__c.Apttus__AgreementId__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>APTS_Depreciation_Installation_cost__c</fullName>
        <formula>APTS_Line_item_Cost_Price_Machine__c /  APTS_Number_of_Machines__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Depreciation Installation cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Distribution_Channel__c</fullName>
        <label>Distribution Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>National (SAP_10)</fullName>
                </value>
                <value>
                    <fullName>Intercompany (SAP_20)</fullName>
                </value>
                <value>
                    <fullName>Export (SAP_30)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Distribution_Cost__c</fullName>
        <label>Distribution Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Document_Version__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Document Version</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Exclude_TAX__c</fullName>
        <defaultValue>false</defaultValue>
        <description>if checked will exclude tax calculation on cart.</description>
        <label>Exclude TAX</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Exclude_VAT__c</fullName>
        <defaultValue>false</defaultValue>
        <description>if checked will exclude VAT calculation on cart</description>
        <inlineHelpText>if checked will exclude VAT calculation on cart</inlineHelpText>
        <label>Exclude VAT</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>